# SurrogateShield

./: .gitignore  LICENSE  README.md  attacker.py  config.py  docs.html  evaluator.py  help_screen.py  index.html  json_tester.py  main.py  paper.md  pipeline.py  pyproject.toml  requirements.txt  run.sh  settings_manager.py  util.py
.github/workflows/: deploy-lib.yml  deploy.yml  publish-pypi.yml
chatbot/: __init__.py  chat.py  rag.py
detection/: __init__.py  context_guard.py  entity_trace.py  geo_data.py  logic.py  pattern_scan.py  quasi_identifier.py  service_query.py
experiment/: README.md  example.json  example_answers.json  example_key.json  experiment.json  experiment_answers.json  experiment_answers_Attacker_Experiment.json  experiment_answers_Attacker_Experiment_Analysis.json  experiment_key.json  output-1.txt  output-2.txt  output.txt  prompt.txt  test.json  test_eval_results.json  test_key.json
generation/: __init__.py  logic.py
presidio/: __init__.py  detect.py  engine.py  redact.py
python-library/: README.md  pyproject.toml
python-library/surrogateshield/: _display.py  _response_parser.py  _state.py
python-library/surrogateshield/core/detection/: context_guard.py  entity_trace.py  pipeline.py  quasi_identifier.py
python-library/surrogateshield/core/storage/: shadow_map.py
reconstruction/: __init__.py  logic.py
storage/: __init__.py  logic.py
surrogateshield/: __init__.py
surrogateshield/core/: entities.py
surrogateshield/core/detection/: entity_trace.py  geo_data.py  pattern_scan.py  service_query.py
surrogateshield/core/generation/: mimic.py
surrogateshield/core/reconstruction/: resolve.py
tests/: test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
website/: docs.html  index.html
