[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surrogateshield"
version = "1.0.0"
description = "Privacy-preserving PII proxy — mask real data before it reaches any LLM"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sherwin Vishesh Jathanna"}
]
keywords = ["privacy", "pii", "llm", "anonymization", "nlp", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "faker>=24.0.0",
    "cryptography>=42.0.0",
    "rapidfuzz>=3.6.0",
    "requests>=2.31.0",
    "spacy>=3.7.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://sherwinvishesh.github.io/SurrogateShield/"
Repository = "https://github.com/sherwinvishesh/SurrogateShield"
Documentation = "https://sherwinvishesh.github.io/SurrogateShield/docs.html"
"Bug Tracker" = "https://github.com/sherwinvishesh/SurrogateShield/issues"

[project.optional-dependencies]
display = ["rich>=13.7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["surrogateshield*"]